Change home and index page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -81,7 +81,7 @@
             <div class="md-form mb-5">
               <div class="signup-modal input-box profile-edit-upload">
                 <img id="img-cover-preview" class="" />
-                <label for="upload-cover-preview" class="input-tweet-icon">
+                <label for="file-cover-upload" class="input-tweet-icon">
                   <i class="far fa-file-image"></i>
                 </label>
                 <input type="file" id="file-cover-upload" name="upload-cover-img" accept='image/*'>
@@ -90,7 +90,7 @@
             <div class="md-form mb-5">
               <div class="signup-modal input-box profile-edit-upload">
                 <img id="img-preview" class="" />
-                <label for="upload-preview" class="input-tweet-icon">
+                <label for="file-profile-upload" class="input-tweet-icon">
                   <i class="far fa-file-image"></i>
                 </label>
                 <input type="file" id="file-profile-upload" name="upload-profile-img" accept='image/*'>
