--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -7,7 +7,7 @@
     <div class="p-0">
       <ul class="nav flex-column" id="nav-container">
         <li class="nav-item nav-btn-active">
-          <a class="nav-link d-flex align-items-baseline" href="/home">
+          <a class="nav-link d-flex align-items-baseline" href="/">
             <div class="p-2 icon-list">
               <i class="fas fa-home fa-2x"></i>
             </div>
