--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
             <div class="login-join">
               <p>Join not twitter today.</p>
             </div>
-            <button class="login-btn-signup" data-toggle="modal" data-target="#modalLoginForm" type="button" name="button">Sign up</button>
+            <button class="login-btn-signup" data-toggle="modal" data-target="#myModal1" type="button" name="button">Sign up</button>
             <button class="login-btn-login" type="button" name="button" onclick="window.location.href = '/login';">Log in</button>
           </div>
         </div>
@@ -42,103 +42,5 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <form id="signup" action="/signup" method="post">
-        <div class="modal-header">
-          <div class="p-2 login-logo"><i class="fab fa-twitter fa-2x"></i></div>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-header signup-header">
-          <h4 class="modal-title w-100 font-weight-bold">Create your account</h4>
-        </div>
-
-        <div class="modal-body mx-5">
-          <div class="md-form mb-5">
-            <div class="signup-modal input-box">
-              <label for="">Username
-                <input type="text" name="username" value="" required>
-              </label>
-            </div>
-          </div>
-          <div class="md-form mb-5">
-            <div class="signup-modal input-box">
-              <label for="">Email
-                <input type="email" name="email" value="" required>
-              </label>
-            </div>
-          </div>
-
-          <div class="md-form mb-5">
-            <div class="signup-modal input-box">
-              <label for="">Password
-                <input type="password" name="password" value="" required>
-              </label>
-            </div>
-          </div>
-          <div class="md-form mb-5">
-            <div class="signup-modal input-box">
-              <label for="">Confirm Password
-                <input type="password" name="cpassword" value="" required>
-              </label>
-            </div>
-          </div>
-          <div class="md-form mb-5">
-            <div class="signup-modal input-box">
-              <label for="">Gender
-                <select name="gender">
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
-                </select>
-              </label>
-            </div>
-          </div>
-          <div class="md-form mb-5">
-            <div class="signup-modal input-box">
-              <label for="">Phone Number
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
-              </label>
-            </div>
-          </div>
-          <div class="dob">
-            <span>Date of birth</span>
-            <p>This will not be shown publicly. Confirm your age to receive the appropriate experience.</p>
-            <div class="md-form mb-5">
-              <div class="d-flex flex-row ">
-                <div class="input-box">
-                  <label for="">Month
-                    <input class="moment-date" type="text" id="month" data-format="MMMM" data-template="MMMM" name="month" value="">
-                  </label>
-                </div>
-                <div class="input-box">
-                  <label for="">Day
-                    <input type="text" id="day" data-format="DD" data-template="D" name="day" value="">
-                  </label>
-                </div>
-                <div class="input-box">
-                  <label for="">Year
-                    <input type="text" id="year" data-format="YYYY" data-template="YYYY " name="year" value="">
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer d-flex justify-content-center">
-            <button class="login-btn-signup" data-toggle="modal" data-target="#modalLoginForm" type="button" name="button" onclick="document.getElementById('signup').submit();">Sign up</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<script>
-  $(function() {
-    $('#year').combodate();
-    $('#day').combodate();
-    $('#month').combodate();
-  });
-</script>
+<%- include("signup-modal.ejs") %>
 <%- include("footer.ejs") %>
