Tweet status page

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/profile.css">
   <link rel="stylesheet" href="/css/tweet.css">
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/tweetStatus.css">
 
   <script src="/js/lib/jquery.min.js"></script>
   <script src="/js/lib/bootstrap.min.js"></script>
