--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -14,6 +14,14 @@
 .tweet-box:hover {
   border-color:  #eee #ddd #bbb;
 }
+.tweet-content-box a{
+  display:block;
+	text-decoration:none;
+  color: black;
+}
+.tweet-box:hover {
+  background-color: #F5F8FA;
+}
 .tweet-name {
   font-size:16px;
   font-weight: bold;
