--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,16 +5,33 @@
     <div class="d-flex flex-row twitter-tweet">
       <h3>Home</h3>
     </div>
-    <form id="tweet-form" action="/tweet" method="POST" enctype="multipart/form-data">
+    <form
+      id="tweet-form"
+      action="/tweet"
+      method="POST"
+      enctype="multipart/form-data"
+    >
       <div class="d-flex flex-row twitter-tweet">
         <div class="p-2">
           <a href="/<%= foundUser.username %>">
-            <img class="rounded-circle" src="data:<%= foundUser.profile.avatar.contentType %>;base64,<%= foundUser.profile.avatar.data %>" height="49" width="49">
+            <img
+              class="rounded-circle"
+              src="data:<%= foundUser.profile.avatar.contentType %>;base64,<%= foundUser.profile.avatar.data %>"
+              height="49"
+              width="49"
+            />
           </a>
         </div>
         <div class="p-2 flex-fill">
           <div class="input-tweet-box">
-            <input type="text" placeholder="What's Happening" name="tweet" value="" autocomplete="off" autocomplete="off">
+            <input
+              type="text"
+              placeholder="What's Happening"
+              name="tweet"
+              value=""
+              autocomplete="off"
+              autocomplete="off"
+            />
           </div>
           <div class="input-tweet-box input-tweet-img">
             <img id="img-preview" class="" />
@@ -24,36 +41,56 @@
               <label for="upload-preview" class="input-tweet-icon">
                 <i class="far fa-file-image"></i>
               </label>
-              <input type='file' id="upload-preview" name="img" accept='image/*' />
+              <input
+                type="file"
+                id="upload-preview"
+                name="img"
+                accept="image/*"
+              />
             </div>
             <div class="input-tweet-group">
-              <button type="button" name="button" class="input-tweet-icon"><i class="fas fa-gift"></i></button>
+              <button type="button" name="button" class="input-tweet-icon">
+                <i class="fas fa-gift"></i>
+              </button>
             </div>
             <div class="input-tweet-group">
-              <button type="button" name="button" class="input-tweet-icon"><i class="fas fa-poll-h"></i></button>
+              <button type="button" name="button" class="input-tweet-icon">
+                <i class="fas fa-poll-h"></i>
+              </button>
             </div>
             <div class="input-tweet-group">
-              <button type="button" name="button" class="input-tweet-icon"><i class="far fa-smile"></i></button>
+              <button type="button" name="button" class="input-tweet-icon">
+                <i class="far fa-smile"></i>
+              </button>
             </div>
 
-            <button type="submit" name="button" class="input-tweet-btn ml-auto">Tweet</button>
+            <button type="submit" name="button" class="input-tweet-btn ml-auto">
+              Tweet
+            </button>
           </div>
         </div>
       </div>
     </form>
-    <div class="d-flex flex-fill tweet-block">
-    </div>
+    <div class="d-flex flex-fill tweet-block"></div>
     <div class="tweet-content-box">
       <% foundTweet.forEach(function(tweet){ %>
       <a class="" href="/<%= tweet.username %>/status/<%= tweet._id %>">
         <div class="d-flex tweet-box">
           <div class="p-2">
-            <img class="rounded-circle" src="data:<%= tweet.tweet_data.profile.avatar.contentType %>;base64,<%= tweet.tweet_data.profile.avatar.data %>" height="49" width="49">
+            <img
+              class="rounded-circle"
+              src="data:<%= tweet.tweet_data.profile.avatar.contentType %>;base64,<%= tweet.tweet_data.profile.avatar.data %>"
+              height="49"
+              width="49"
+            />
           </div>
           <div class="p-2 flex-fill">
             <div class="d-flex ">
               <span class="tweet-name"><%= tweet.name %></span>
-              <span class="tweet-tag">@<%= tweet.username %> · <%= moment(tweet.timestamp).fromNow(); %> </span>
+              <span class="tweet-tag"
+                >@<%= tweet.username %> · <%= moment(tweet.timestamp).fromNow();
+                %>
+              </span>
             </div>
             <div class="d-flex ">
               <span class="tweet-content"><%= tweet.content %></span>
@@ -61,22 +98,49 @@
             <% if(tweet.img.data) {%>
             <div class="d-flex ">
               <span class="tweet-content tweet-content-img">
-                <img src="data:<%= tweet.img.contentType %>;base64,<%= tweet.img.data %>" alt="" />
+                <img
+                  src="data:<%= tweet.img.contentType %>;base64,<%= tweet.img.data %>"
+                  alt=""
+                />
               </span>
             </div>
             <% } %>
             <div class="d-flex ">
               <div class="p-2 flex-fill">
-                <button type="button" name="button" class="flex-fill tweet-content-icon"><i class="far fa-comment"></i></button>
+                <button
+                  type="button"
+                  name="button"
+                  class="flex-fill tweet-content-icon"
+                >
+                  <i class="far fa-comment"></i>
+                </button>
               </div>
               <div class="p-2 flex-fill">
-                <button type="button" name="button" class="flex-fill tweet-content-icon"><i class="fas fa-retweet"></i></button>
+                <button
+                  type="button"
+                  name="button"
+                  class="flex-fill tweet-content-icon"
+                >
+                  <i class="fas fa-retweet"></i>
+                </button>
               </div>
               <div class="p-2 flex-fill">
-                <button type="button" name="button" class="flex-fill tweet-content-icon"><i class="fas fa-heart"></i></button>
+                <button
+                  type="button"
+                  name="button"
+                  class="flex-fill tweet-content-icon"
+                >
+                  <i class="fas fa-heart"></i>
+                </button>
               </div>
               <div class="p-2 flex-fill">
-                <button type="button" name="button" class="flex-fill tweet-content-icon"><i class="fas fa-external-link-alt"></i></button>
+                <button
+                  type="button"
+                  name="button"
+                  class="flex-fill tweet-content-icon"
+                >
+                  <i class="fas fa-external-link-alt"></i>
+                </button>
               </div>
               <!-- <div class="p-2 flex-fill">
                 <button type="button" name="button" class="flex-fill tweet-content-icon"><i class="fas fa-poll"></i></i></button>
@@ -84,17 +148,17 @@
             </div>
           </div>
         </div>
-    <% }); %>
-  </a>
-</div>
+        <% }); %>
+      </a>
+    </div>
   </div>
   <script>
     function readURL(input) {
       if (input.files && input.files[0]) {
         var reader = new FileReader();
         reader.onload = function(e) {
-          $('#img-preview').attr('src', e.target.result);
-        }
+          $("#img-preview").attr("src", e.target.result);
+        };
         reader.readAsDataURL(input.files[0]);
       }
     }
