Added profile box

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -102,7 +102,7 @@
           <button id="media" class="btn p-2 flex-fill tweet-nav-item">
             Media
           </button>
-          <button id="likes" class="btn p-2 flex-fill tweet-nav-item">
+          <button class="btn p-2 flex-fill tweet-nav-item">
             Likes
           </button>
         </div>
