Added tweet with image

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
               <input
                 type="file"
                 id="upload-preview"
-                name="img"
+                name="upload-img"
                 accept="image/*"
               />
             </div>
